# ol_ai_context_library

./: .gitignore  README.md  pyproject.toml  skills-lock.json
docs/coding/: boro-skills-plan.md  clean-coding-skills-plan.md
prompts/data_modeling/: formatters.py  initial_data_model.py  iterative_data_model.py  template.py
prompts/discovery/: discovery.py
prompts/form_extraction/: __init__.py  templates.py
prompts/graph_rag/: __init__.py  general_graph_rag_prompts.py
prompts/text_extraction/: __init__.py  extraction_prompts.py
scripts/: install_claude_desktop.py
skills/: SKILL-ARCHITECTURE.md  SKILL-INHERITANCE-DIAGRAM.md
skills/agent-architect/: SKILL.md
skills/agent-engineer/: SKILL.md
skills/backlog-manager/: SKILL.md
skills/bclearer-pipeline-architect/: SKILL.md
skills/bclearer-pipeline-engineer/: SKILL.md
skills/bie-component-ontologist/: SKILL.md
skills/bie-data-engineer/: SKILL.md
skills/bie-domain-ontologist/: SKILL.md
skills/boro-ontologist/: SKILL.md
skills/clean-code-commit/: SKILL.md
skills/clean-code-naming/: SKILL.md
skills/clean-code-refactor/: SKILL.md
skills/clean-code-reviewer/: SKILL.md
skills/clean-code-size/: SKILL.md
skills/clean-code-tests/: SKILL.md
skills/confluence-space-manager/: SKILL.md
skills/csharp-data-engineer/: SKILL.md
skills/data-engineer/: SKILL.md
skills/feature-spec-author/: SKILL.md
skills/go-data-engineer/: SKILL.md
skills/javascript-data-engineer/: SKILL.md
skills/jira-epic-executor/: SKILL.md
skills/jira-impl-logger/: SKILL.md
skills/jira-task-executor/: SKILL.md
(+163 files in other folders)
