[project]
name = "ol-ai-context-library"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.package-data]
"ol_ai_context_library" = ["skills/**/*.md", "skills/**/*.yaml", "skills/**/*.j2", "prompts/**/*.md"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
